<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="251dp"
            android:layout_weight="3">

            <EditText
                android:id="@+id/mainScreen"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center|right"
                android:text="0"
                android:textColor="#000000"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearAll"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:onClick="clearAllEvent"
                android:text="CE"
                android:textSize="22sp" />
            <Button
                android:id="@+id/squareRoot"
                android:layout_height="match_parent"
                android:onClick="operatorEvent"
                android:text="√"
                android:textSize="22sp" />

            <Button
                android:id="@+id/delete"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:onClick="numberEvent"
                android:text="DEL"
                android:textSize="22sp" />

            <Button
                android:id="@+id/changeSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:onClick="numberEvent"
                android:text="+/-"
                android:textSize="22sp" />

            <Button
                android:id="@+id/percentage"
                android:layout_height="match_parent"
                android:onClick="percentageEvent"
                android:text="%"
                android:textSize="22sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n7"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="7"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n8"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="8"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n9"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="9"
                android:textSize="22sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_height="match_parent"
                android:onClick="operatorEvent"
                android:text="*"
                android:textSize="22sp" />

            <Button
                android:id="@+id/division"
                android:layout_height="match_parent"
                android:onClick="operatorEvent"
                android:text="÷"
                android:textSize="22sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n4"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="4"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n5"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="5"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n6"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="6"
                android:textSize="22sp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="operatorEvent"
                android:text="+"
                android:textSize="22sp" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="operatorEvent"
                android:text="-"
                android:textSize="22sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="1"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="2"
                android:textSize="22sp" />

            <Button
                android:id="@+id/n3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:onClick="numberEvent"
                android:text="3"
                android:textSize="22sp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="numberEvent"
                android:text="."
                android:textSize="22sp" />



        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/n0"
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:onClick="numberEvent"
                android:text="0"
                android:textSize="22sp" />

            <Button
                android:id="@+id/equalsTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:onClick="equalsToEvent"
                android:text="="
                android:textSize="22sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>